--- a/data/WED.ipynb
+++ b/data/WED.ipynb
@@ -9,18 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'starttime' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n\u001b[32m      5\u001b[39m params = {\n\u001b[32m      6\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mformat\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mgeojson\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mstarttime\u001b[39m\u001b[33m\"\u001b[39m: \u001b[43mstarttime\u001b[49m.strftime(\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY-\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m\"\u001b[39m),\n\u001b[32m      8\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mendtime\u001b[39m\u001b[33m\"\u001b[39m: endtime.strftime(\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY-\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m\"\u001b[39m),    \n\u001b[32m      9\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mminmagnitude\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m4\u001b[39m,  \n\u001b[32m     10\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmaxlatitude\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m72.0\u001b[39m, \n\u001b[32m     11\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mminlatitude\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m35.0\u001b[39m,  \n\u001b[32m     12\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmaxlongitude\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m40.0\u001b[39m,  \n\u001b[32m     13\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mminlongitude\u001b[39m\u001b[33m\"\u001b[39m: -\u001b[32m25.0\u001b[39m\n\u001b[32m     14\u001b[39m }\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Request data from USGS API\u001b[39;00m\n\u001b[32m     17\u001b[39m url = \u001b[33m\"\u001b[39m\u001b[33mhttps://earthquake.usgs.gov/fdsnws/event/1/query\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[31mNameError\u001b[39m: name 'starttime' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     Time  Magnitude                        Location  \\\n",
+      "0 2025-03-24 05:18:52.459        4.4       78 km S of Faro, Portugal   \n",
+      "1 2025-03-21 03:47:32.868        4.3     25 km SW of Amorgós, Greece   \n",
+      "2 2025-03-18 09:50:27.350        4.8  18 km SW of Lakhdaria, Algeria   \n",
+      "3 2025-03-18 09:01:25.597        4.5        3 km E of Potenza, Italy   \n",
+      "4 2025-03-16 15:07:46.291        4.3    18 km SSW of Amorgós, Greece   \n",
+      "\n",
+      "   Longitude  Latitude  Depth (km)  \n",
+      "0    -7.9261   36.3124        10.0  \n",
+      "1    25.6984   36.6721        10.0  \n",
+      "2     3.4280   36.4713        10.0  \n",
+      "3    15.8522   40.6433        10.0  \n",
+      "4    25.7902   36.6849        10.0  \n"
      ]
     }
    ],
