Add cleaned dataset and visualizations for earthquake analysis

--- a/seismic-insight/notebooks/Seismic-Insight.ipynb
+++ b/seismic-insight/notebooks/Seismic-Insight.ipynb
@@ -9,26 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     Time  Magnitude                        Location  \\\n",
-      "0 2025-04-25 17:33:16.771        4.3    19 km S of Kumburgaz, Turkey   \n",
-      "1 2025-04-25 07:20:03.164        4.6        22 km N of Simav, Turkey   \n",
-      "2 2025-04-25 04:23:44.604        4.5        24 km N of Simav, Turkey   \n",
-      "3 2025-04-23 12:12:57.020        5.0      23 km S of Silivri, Turkey   \n",
-      "4 2025-04-23 11:50:35.075        4.0  20 km SSW of Kumburgaz, Turkey   \n",
+      "                     Time  Magnitude                       Location  \\\n",
+      "0 2025-04-27 18:09:38.109        4.7  11 km WNW of Doğanyol, Turkey   \n",
+      "1 2025-04-25 17:33:16.771        4.3   19 km S of Kumburgaz, Turkey   \n",
+      "2 2025-04-25 07:20:03.164        4.6       22 km N of Simav, Turkey   \n",
+      "3 2025-04-25 04:23:44.604        4.5       24 km N of Simav, Turkey   \n",
+      "4 2025-04-23 12:12:57.020        5.0     23 km S of Silivri, Turkey   \n",
       "\n",
       "   Longitude  Latitude  Depth (km)  \n",
-      "0    28.4496   40.8476      13.696  \n",
-      "1    28.9825   39.2908      10.000  \n",
-      "2    28.9654   39.3125      10.000  \n",
-      "3    28.2296   40.8591      10.000  \n",
-      "4    28.3477   40.8616      10.000  \n"
+      "0    38.9278   38.3634      12.188  \n",
+      "1    28.4496   40.8476      13.696  \n",
+      "2    28.9825   39.2908      10.000  \n",
+      "3    28.9654   39.3125      10.000  \n",
+      "4    28.2296   40.8591      10.000  \n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4    Kermadec Islands region  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "4    Kermadec Islands region  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,10 +435,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_magnitude_histogram(df):\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    plt.hist(df[\"mag\"], bins=10, edgecolor='black')\n",
+    "    plt.title(\"Distribution of Earthquake Magnitudes\")\n",
+    "    plt.xlabel(\"Magnitude\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()  # 👈 Important!\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "def plot_top_regions(df):\n",
+    "    top_regions = df[\"region\"].value_counts().head(5)\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    sns.barplot(x=top_regions.values, y=top_regions.index)\n",
+    "    plt.title(\"Top 5 Earthquake Regions\")\n",
+    "    plt.xlabel(\"Count\")\n",
+    "    plt.ylabel(\"Region\")\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_magnitude_by_region(df):\n",
+    "    top = df[df[\"region\"].isin(df[\"region\"].value_counts().index[:5])]\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    sns.boxplot(data=top, x=\"region\", y=\"mag\")\n",
+    "    plt.title(\"Magnitude Distribution by Region\")\n",
+    "    plt.ylabel(\"Magnitude\")\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
+   ]
   }
  ],
  "metadata": {
