--- a/seismic-insight/notebooks/Seismic-Insight.ipynb
+++ b/seismic-insight/notebooks/Seismic-Insight.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4    Kermadec Islands region  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "4    Kermadec Islands region  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,6 +486,152 @@
     "    plt.xticks(rotation=45)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Statistical Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation: -0.008566499841617937, P-value: 0.8502822371391596\n",
+      "T-statistic: nan, P-value: nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.11/site-packages/scipy/_lib/deprecation.py:234: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr, ttest_ind\n",
+    "\n",
+    "# Correlation analysis between magnitude and depth\n",
+    "correlation, p_value = pearsonr(df['mag'], df['depth'])\n",
+    "print(f'Correlation: {correlation}, P-value: {p_value}')\n",
+    "\n",
+    "# Statistical test: Compare magnitudes of two regions\n",
+    "region1 = df[df['place'].str.contains('California')]['mag']\n",
+    "region2 = df[df['place'].str.contains('Alaska')]['mag']\n",
+    "t_stat, p_val = ttest_ind(region1, region2, equal_var=False)\n",
+    "print(f'T-statistic: {t_stat}, P-value: {p_val}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Database Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('2024-03-30 22:55:52.655000', '77 km W of Panguna, Papua New Guinea', 5.1, 77.27, 154.7807, -6.3333, 'earthquake', 'us7000m900', 'https://earthquake.usgs.gov/earthquakes/eventpage/us7000m900', 'Panguna, Papua New Guinea'), ('2024-03-30 17:35:49.670000', '164 km W of Pangai, Tonga', 5.2, 10.0, -175.9239, -19.7019, 'earthquake', 'us7000m8z0', 'https://earthquake.usgs.gov/earthquakes/eventpage/us7000m8z0', 'Pangai, Tonga'), ('2024-03-30 16:44:25.049000', '171 km NNW of Houma, Tonga', 5.3, 10.249, -176.0022, -19.7708, 'earthquake', 'us7000m8yl', 'https://earthquake.usgs.gov/earthquakes/eventpage/us7000m8yl', 'Houma, Tonga'), ('2024-03-30 16:28:57.456000', 'Rat Islands, Aleutian Islands, Alaska', 5.8, 109.0, 178.3963, 52.1143, 'earthquake', 'us7000m8yd', 'https://earthquake.usgs.gov/earthquakes/eventpage/us7000m8yd', 'Rat Islands, Aleutian Islands, Alaska'), ('2024-03-30 09:48:17.120000', 'central East Pacific Rise', 5.1, 10.0, -103.9175, -4.0264, 'earthquake', 'us7000m8ww', 'https://earthquake.usgs.gov/earthquakes/eventpage/us7000m8ww', 'central East Pacific Rise')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "# Connect to SQLite database\n",
+    "conn = sqlite3.connect('../data/database.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create a table for earthquake data\n",
+    "cursor.execute('''CREATE TABLE IF NOT EXISTS earthquakes (\n",
+    "    Time TEXT, Magnitude REAL, Location TEXT, Longitude REAL, Latitude REAL, Depth REAL)''')\n",
+    "\n",
+    "# Rename DataFrame columns to match the SQLite table schema\n",
+    "df.rename(columns={\n",
+    "    \"time\": \"Time\",\n",
+    "    \"mag\": \"Magnitude\",\n",
+    "    \"place\": \"Location\",\n",
+    "    \"longitude\": \"Longitude\",\n",
+    "    \"latitude\": \"Latitude\",\n",
+    "    \"depth\": \"Depth\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Insert data into the table\n",
+    "df.to_sql('earthquakes', conn, if_exists='replace', index=False)\n",
+    "\n",
+    "# Query the database\n",
+    "cursor.execute('SELECT * FROM earthquakes WHERE Magnitude > 5')\n",
+    "results = cursor.fetchall()\n",
+    "print(results[:5])\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LLM Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error importing summarize_data: cannot import name 'summarize_data' from 'src.llm_helper' (/workspaces/Project-Poseidon/seismic-insight/src/llm_helper.py)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the summarize_data function\n",
+    "try:\n",
+    "    from src.llm_helper import summarize_data\n",
+    "    print('LLM helper imported successfully.')\n",
+    "except ImportError as e:\n",
+    "    print(f'Error importing summarize_data: {e}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error during summarization: name 'summarize_data' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attempt to summarize data\n",
+    "try:\n",
+    "    summary = summarize_data(df)\n",
+    "    print(summary)\n",
+    "except Exception as e:\n",
+    "    print(f'Error during summarization: {e}')"
    ]
   }
  ],
