--- a/seismic-insight/notebooks/Seismic-Insight.ipynb
+++ b/seismic-insight/notebooks/Seismic-Insight.ipynb
@@ -9,26 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     Time  Magnitude                       Location  \\\n",
-      "0 2025-04-27 18:09:38.109        4.7  11 km WNW of Doğanyol, Turkey   \n",
-      "1 2025-04-25 17:33:16.771        4.3   19 km S of Kumburgaz, Turkey   \n",
-      "2 2025-04-25 07:20:03.164        4.6       22 km N of Simav, Turkey   \n",
-      "3 2025-04-25 04:23:44.604        4.5       24 km N of Simav, Turkey   \n",
-      "4 2025-04-23 12:12:57.020        5.0     23 km S of Silivri, Turkey   \n",
+      "                     Time  Magnitude                        Location  \\\n",
+      "0 2025-05-01 14:43:44.389        4.1        21 km N of Serik, Turkey   \n",
+      "1 2025-05-01 10:23:53.699        4.2  9 km S of Ouranoupolis, Greece   \n",
+      "2 2025-04-30 23:48:10.940        4.1      17 km SE of Bodrum, Turkey   \n",
+      "3 2025-04-30 05:36:23.985        4.5        33 km WNW of Fry, Greece   \n",
+      "4 2025-04-27 18:09:38.109        4.7   11 km WNW of Doğanyol, Turkey   \n",
       "\n",
       "   Longitude  Latitude  Depth (km)  \n",
-      "0    38.9278   38.3634      12.188  \n",
-      "1    28.4496   40.8476      13.696  \n",
-      "2    28.9825   39.2908      10.000  \n",
-      "3    28.9654   39.3125      10.000  \n",
-      "4    28.2296   40.8591      10.000  \n"
+      "0    31.0858   37.1107     109.477  \n",
+      "1    23.9826   40.2494      10.000  \n",
+      "2    27.5581   36.9203      12.435  \n",
+      "3    26.5653   35.4778      10.000  \n",
+      "4    38.9278   38.3634      12.188  \n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4    Kermadec Islands region  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,198 +230,18 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "# Dynamically find the project root and add it to the path\n",
-    "project_path = os.path.abspath(\"..\")  # Fixed!\n",
+    "# Add project root to path\n",
+    "project_path = os.path.abspath(\"..\")\n",
     "sys.path.append(project_path)\n",
     "\n",
-    "# Make sure data folder exists\n",
+    "# Ensure data folder exists\n",
     "os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
-    "# Now import from your src package\n",
+    "# Import your project functions\n",
     "from src import (\n",
     "    fetch_earthquake_data,\n",
     "    clean_earthquake_data,\n",
     "    perform_analysis,\n",
-    "    generate_summary_from_data,\n",
-    "    map_epicenters,\n",
-    ")\n",
-    "\n",
-    "# Run the pipeline\n",
-    "fetch_earthquake_data(\"2024-03-01\", \"2024-03-31\")\n",
-    "df = clean_earthquake_data()\n",
-    "print(f\"✅ Cleaned {len(df)} earthquakes.\")  # <-- Fixed here\n",
-    "df.head()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Cleaned 488 earthquakes.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>place</th>\n",
-       "      <th>mag</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>type</th>\n",
-       "      <th>id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-03-30 22:55:52.655</td>\n",
-       "      <td>77 km W of Panguna, Papua New Guinea</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>77.270</td>\n",
-       "      <td>154.7807</td>\n",
-       "      <td>-6.3333</td>\n",
-       "      <td>earthquake</td>\n",
-       "      <td>us7000m900</td>\n",
-       "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
-       "      <td>Panguna, Papua New Guinea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-03-30 22:07:30.357</td>\n",
-       "      <td>165 km NNW of Houma, Tonga</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>10.000</td>\n",
-       "      <td>-175.9989</td>\n",
-       "      <td>-19.8295</td>\n",
-       "      <td>earthquake</td>\n",
-       "      <td>us7000ma6u</td>\n",
-       "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
-       "      <td>Houma, Tonga</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-03-30 21:32:36.907</td>\n",
-       "      <td>186 km NNW of Houma, Tonga</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>10.000</td>\n",
-       "      <td>-176.1780</td>\n",
-       "      <td>-19.7060</td>\n",
-       "      <td>earthquake</td>\n",
-       "      <td>us7000ma6q</td>\n",
-       "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
-       "      <td>Houma, Tonga</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-03-30 20:55:08.465</td>\n",
-       "      <td>46 km W of Port-Vila, Vanuatu</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>10.000</td>\n",
-       "      <td>167.8799</td>\n",
-       "      <td>-17.8037</td>\n",
-       "      <td>earthquake</td>\n",
-       "      <td>us7000ma6p</td>\n",
-       "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
-       "      <td>Port-Vila, Vanuatu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-03-30 20:04:08.351</td>\n",
-       "      <td>Kermadec Islands region</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>9.606</td>\n",
-       "      <td>-177.8442</td>\n",
-       "      <td>-27.8943</td>\n",
-       "      <td>earthquake</td>\n",
-       "      <td>us7000ma6x</td>\n",
-       "      <td>https://earthquake.usgs.gov/earthquakes/eventp...</td>\n",
-       "      <td>Kermadec Islands region</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     time                                 place  mag   depth  \\\n",
-       "0 2024-03-30 22:55:52.655  77 km W of Panguna, Papua New Guinea  5.1  77.270   \n",
-       "1 2024-03-30 22:07:30.357            165 km NNW of Houma, Tonga  4.8  10.000   \n",
-       "2 2024-03-30 21:32:36.907            186 km NNW of Houma, Tonga  4.5  10.000   \n",
-       "3 2024-03-30 20:55:08.465         46 km W of Port-Vila, Vanuatu  4.7  10.000   \n",
-       "4 2024-03-30 20:04:08.351               Kermadec Islands region  4.6   9.606   \n",
-       "\n",
-       "   longitude  latitude        type          id  \\\n",
-       "0   154.7807   -6.3333  earthquake  us7000m900   \n",
-       "1  -175.9989  -19.8295  earthquake  us7000ma6u   \n",
-       "2  -176.1780  -19.7060  earthquake  us7000ma6q   \n",
-       "3   167.8799  -17.8037  earthquake  us7000ma6p   \n",
-       "4  -177.8442  -27.8943  earthquake  us7000ma6x   \n",
-       "\n",
-       "                                                 url  \\\n",
-       "0  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
-       "1  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
-       "2  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
-       "3  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
-       "4  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
-       "\n",
-       "                      region  \n",
-       "0  Panguna, Papua New Guinea  \n",
-       "1               Houma, Tonga  \n",
-       "2               Houma, Tonga  \n",
-       "3         Port-Vila, Vanuatu  \n",
-       "4    Kermadec Islands region  "
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Dynamically find the project root and add it to the path\n",
-    "project_path = os.path.abspath(\"..\")  # adjust if your notebook is deeper or higher\n",
-    "sys.path.append(project_path)\n",
-    "\n",
-    "# Make sure data folder exists\n",
-    "os.makedirs(\"data\", exist_ok=True)\n",
-    "\n",
-    "# Now import from your src package\n",
-    "from src import (\n",
-    "    fetch_earthquake_data,\n",
-    "    clean_earthquake_data,\n",
-    "    perform_analysis,\n",
-    "    generate_summary_from_data,\n",
     "    map_epicenters,\n",
     ")\n",
     "\n",
@@ -430,12 +250,138 @@
     "df = clean_earthquake_data()\n",
     "print(f\"✅ Cleaned {len(df)} earthquakes.\")\n",
     "df.head()\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned 488 earthquakes.\n",
+      "                     time                                 place  mag   depth  \\\n",
+      "0 2024-03-30 22:55:52.655  77 km W of Panguna, Papua New Guinea  5.1  77.270   \n",
+      "1 2024-03-30 22:07:30.357            165 km NNW of Houma, Tonga  4.8  10.000   \n",
+      "2 2024-03-30 21:32:36.907            186 km NNW of Houma, Tonga  4.5  10.000   \n",
+      "3 2024-03-30 20:55:08.465         46 km W of Port-Vila, Vanuatu  4.7  10.000   \n",
+      "4 2024-03-30 20:04:08.351               Kermadec Islands region  4.6   9.606   \n",
+      "\n",
+      "   longitude  latitude        type          id  \\\n",
+      "0   154.7807   -6.3333  earthquake  us7000m900   \n",
+      "1  -175.9989  -19.8295  earthquake  us7000ma6u   \n",
+      "2  -176.1780  -19.7060  earthquake  us7000ma6q   \n",
+      "3   167.8799  -17.8037  earthquake  us7000ma6p   \n",
+      "4  -177.8442  -27.8943  earthquake  us7000ma6x   \n",
+      "\n",
+      "                                                 url  \\\n",
+      "0  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
+      "1  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
+      "2  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
+      "3  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
+      "4  https://earthquake.usgs.gov/earthquakes/eventp...   \n",
+      "\n",
+      "                      region  \n",
+      "0  Panguna, Papua New Guinea  \n",
+      "1               Houma, Tonga  \n",
+      "2               Houma, Tonga  \n",
+      "3         Port-Vila, Vanuatu  \n",
+      "4    Kermadec Islands region  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Dynamically find the project root and add it to the path\n",
+    "project_path = os.path.abspath(\"..\")  # Adjust if your notebook is deeper\n",
+    "sys.path.append(project_path)\n",
+    "\n",
+    "# ✅ Ensure data and output folders exist\n",
+    "os.makedirs(\"data\", exist_ok=True)\n",
+    "os.makedirs(\"seismic-insight/outputs\", exist_ok=True)\n",
+    "\n",
+    "# ✅ Import functions from src\n",
+    "from src import (\n",
+    "    fetch_earthquake_data,\n",
+    "    clean_earthquake_data,\n",
+    "    perform_analysis,\n",
+    "    map_epicenters,\n",
+    ")\n",
+    "\n",
+    "# ✅ Fetch and clean data\n",
+    "fetch_earthquake_data(\"2024-03-01\", \"2024-03-31\")\n",
+    "df = clean_earthquake_data()\n",
+    "print(f\"✅ Cleaned {len(df)} earthquakes.\")\n",
+    "\n",
+    "# ✅ Preview data\n",
+    "print(df.head())\n",
+    "\n",
+    "# ✅ Rename columns for compatibility\n",
+    "df.rename(columns={\n",
+    "    \"Magnitude\": \"mag\",\n",
+    "    \"Depth (km)\": \"depth\",\n",
+    "    \"Location\": \"place\",\n",
+    "    \"Latitude\": \"latitude\",\n",
+    "    \"Longitude\": \"longitude\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Renamed columns: ['time', 'place', 'mag', 'depth', 'longitude', 'latitude', 'type', 'id', 'url', 'region']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Setup project path\n",
+    "project_path = os.path.abspath(\"..\")\n",
+    "sys.path.append(project_path)\n",
+    "\n",
+    "# Now import your functions\n",
+    "from src import fetch_earthquake_data, clean_earthquake_data\n",
+    "\n",
+    "# Fetch and clean the data\n",
+    "fetch_earthquake_data(\"2024-03-01\", \"2024-03-31\")\n",
+    "df = clean_earthquake_data()\n",
+    "\n",
+    "# Rename columns to match analysis\n",
+    "df.rename(columns={\n",
+    "    \"Magnitude\": \"mag\",\n",
+    "    \"Depth\": \"depth\",\n",
+    "    \"Location\": \"place\",\n",
+    "    \"Latitude\": \"latitude\",\n",
+    "    \"Longitude\": \"longitude\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Confirm columns\n",
+    "print(\"✅ Renamed columns:\", df.columns.tolist())\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,38 +443,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation: -0.008566499841617937, P-value: 0.8502822371391596\n",
-      "T-statistic: nan, P-value: nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vscode/.local/lib/python3.11/site-packages/scipy/_lib/deprecation.py:234: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
-      "  return f(*args, **kwargs)\n"
+      "BEFORE RENAME: ['time', 'place', 'mag', 'depth', 'longitude', 'latitude', 'type', 'id', 'url', 'region']\n",
+      "AFTER RENAME: ['time', 'place', 'mag', 'depth', 'longitude', 'latitude', 'type', 'id', 'url', 'region']\n",
+      "📈 Correlation: -0.009, P-value: 0.850\n",
+      "⚠️ Not enough data for one or both regions.\n"
      ]
     }
    ],
    "source": [
+    "# ✅ Check original column names\n",
+    "print(\"BEFORE RENAME:\", df.columns.tolist())\n",
+    "\n",
+    "# ✅ Rename columns first\n",
+    "df.rename(columns={\n",
+    "    \"Magnitude\": \"mag\",\n",
+    "    \"Depth (km)\": \"depth\",\n",
+    "    \"Location\": \"place\",\n",
+    "    \"Latitude\": \"latitude\",\n",
+    "    \"Longitude\": \"longitude\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "print(\"AFTER RENAME:\", df.columns.tolist())\n",
+    "\n",
+    "# ✅ Now do analysis\n",
     "from scipy.stats import pearsonr, ttest_ind\n",
     "\n",
     "# Correlation analysis between magnitude and depth\n",
     "correlation, p_value = pearsonr(df['mag'], df['depth'])\n",
-    "print(f'Correlation: {correlation}, P-value: {p_value}')\n",
+    "print(f'📈 Correlation: {correlation:.3f}, P-value: {p_value:.3f}')\n",
     "\n",
-    "# Statistical test: Compare magnitudes of two regions\n",
-    "region1 = df[df['place'].str.contains('California')]['mag']\n",
-    "region2 = df[df['place'].str.contains('Alaska')]['mag']\n",
-    "t_stat, p_val = ttest_ind(region1, region2, equal_var=False)\n",
-    "print(f'T-statistic: {t_stat}, P-value: {p_val}')"
+    "# Statistical test between California and Alaska\n",
+    "region1 = df[df['place'].str.contains('California', case=False, na=False)]['mag']\n",
+    "region2 = df[df['place'].str.contains('Alaska', case=False, na=False)]['mag']\n",
+    "\n",
+    "if not region1.empty and not region2.empty:\n",
+    "    t_stat, p_val = ttest_ind(region1, region2, equal_var=False)\n",
+    "    print(f'📊 T-test: T-statistic = {t_stat:.3f}, P-value = {p_val:.3f}')\n",
+    "else:\n",
+    "    print(\"⚠️ Not enough data for one or both regions.\")\n",
+    "\n"
    ]
   },
   {
@@ -540,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -592,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error importing summarize_data: cannot import name 'summarize_data' from 'src.llm_helper' (/workspaces/Project-Poseidon/seismic-insight/src/llm_helper.py)\n"
+      "Error importing summarize_data: No module named 'src.llm_helper'\n"
      ]
     }
    ],
@@ -614,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -632,6 +592,43 @@
     "    print(summary)\n",
     "except Exception as e:\n",
     "    print(f'Error during summarization: {e}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Columns after rename: ['Time', 'place', 'mag', 'depth', 'longitude', 'latitude', 'type', 'id', 'url', 'region']\n",
+      "🌍 Map saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ✅ Rename columns only once\n",
+    "df.rename(columns={\n",
+    "    \"Magnitude\": \"mag\",\n",
+    "    \"Depth\": \"depth\",\n",
+    "    \"Location\": \"place\",\n",
+    "    \"Latitude\": \"latitude\",\n",
+    "    \"Longitude\": \"longitude\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "print(\"✅ Columns after rename:\", df.columns.tolist())\n",
+    "\n",
+    "# ✅ Ensure output directory exists\n",
+    "import os\n",
+    "os.makedirs(\"seismic-insight/outputs\", exist_ok=True)\n",
+    "\n",
+    "# ✅ Generate the map\n",
+    "from src.visualization import map_epicenters\n",
+    "map_epicenters(df, output_path=\"seismic-insight/outputs/world_map.html\")\n",
+    "\n",
+    "print(\"🌍 Map saved successfully!\")\n"
    ]
   }
  ],
