--- a/seismic-insight/notebooks/Seismic-Insight.ipynb
+++ b/seismic-insight/notebooks/Seismic-Insight.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
     "# Run the pipeline\n",
     "fetch_earthquake_data(\"2024-03-01\", \"2024-03-31\")\n",
     "df = clean_earthquake_data()\n",
-    "print(f\"✅ Cleaned {len(df)} earthquakes.\")\n",
+    "print(f\"Cleaned {len(df)} earthquakes.\")\n",
     "df.head()\n",
     "\n",
     "\n",
